--- a/front-web/public/index.html
+++ b/front-web/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Big Game Survay</title>
+    <title>Big Game Survey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
