--- a/front-web/public/index.html
+++ b/front-web/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="../logoIcon.png"/>
     <title>Big Game Survey</title>
   </head>
   <body>
